--- a/main.css
+++ b/main.css
@@ -9,13 +9,7 @@
     h1, h2 {
       color: #000;
     }
-    a {
-      color: #0645ad;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+
     .infobox {
       float: right;
       width: 600px;
@@ -24,4 +18,15 @@
       background-color: #f0f0f0;
       border: 1px solid #ccc;
     }
+  .button-group {
+    text-align: center;
+    margin-top: 20px;
+}
+.button-group {
+    display: flex;
+    justify-content: space-between;
+}
+.button-group button {
+    padding: 10px 20px;
+}
   
